load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_selenium_test_suite")

java_selenium_test_suite(
    name = "large-tests",
    size = "large",
    srcs = glob(["*Test.java"]),
    browsers = [
        "chrome",
        "firefox",
        "edge",
    ],
    deps = [
        ":test-lib",
        "//java/client/src/org/smartqa/automationagent/devtools",
        "//java/client/src/org/smartqa/automationagent/remote",
        "//java/client/test/org/smartqa/automationagent/testing:annotations",
        artifact("com.google.guava:guava"),
        artifact("junit:junit"),
        artifact("org.assertj:assertj-core"),
    ],
)

java_library(
    name = "test-lib",
    srcs = glob(
        ["*.java"],
        exclude = [
            "*Tests.java",
            "*Test.java",
        ],
    ),
    deps = [
        "//java/client/src/org/smartqa/automationagent/chrome",
        "//java/client/src/org/smartqa/automationagent/devtools",
        "//java/client/src/org/smartqa/automationagent/remote",
        "//java/client/test/org/smartqa/automationagent/environment",
        "//java/client/test/org/smartqa/automationagent/testing:test-base",
        "//java/client/test/org/smartqa/automationagent/testing/drivers",
        artifact("junit:junit"),
        artifact("org.assertj:assertj-core"),
    ],
)
