load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_test_suite")

java_test_suite(
    name = "SmallTests",
    size = "small",
    srcs = glob(["*.java"]),
    deps = [
        "//java/client/src/org/smartqa/automationagent/json",
        "//java/client/src/org/smartqa/automationagent/remote",
        artifact("com.google.guava:guava"),
        artifact("junit:junit"),
        artifact("org.assertj:assertj-core"),
        artifact("com.google.code.gson:gson"),
    ],
)
