load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_test_suite")

java_test_suite(
    name = "SmallTests",
    size = "small",
    srcs = glob(["*.java"]),
    deps = [
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/os",
        "//java/client/test/org/smartqa/automationagent/testing:test-base",
        artifact("org.assertj:assertj-core"),
        artifact("junit:junit"),
        artifact("org.mockito:mockito-core"),
    ],
)
