load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_test_suite")

java_test_suite(
    name = "small-tests",
    size = "small",
    srcs = glob(
        ["*Test.java"],
        exclude = [
            "RemoteWebDriverScreenshotTest.java",
        ],
    ),
    tags = [
        "no-sandbox",
    ],
    deps = [
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/chrome",
        "//java/client/src/org/smartqa/automationagent/firefox",
        "//java/client/src/org/smartqa/automationagent/firefox/xpi",
        "//java/client/src/org/smartqa/automationagent/ie",
        "//java/client/src/org/smartqa/automationagent/json",
        "//java/client/src/org/smartqa/automationagent/remote",
        artifact("org.assertj:assertj-core"),
        artifact("com.google.guava:guava"),
        artifact("junit:junit"),
        artifact("org.mockito:mockito-core"),
    ],
)
