load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_test_suite")

java_library(
    name = "annotations",
    srcs = [
        "Ignore.java",
        "IgnoreList.java",
        "NeedsFreshDriver.java",
        "NeedsLocalEnvironment.java",
        "NoDriverAfterTest.java",
        "NoDriverBeforeTest.java",
        "NotYetImplemented.java",
        "NotYetImplementedList.java",
        "SwitchToTopAfterTest.java",
    ],
    visibility = [
        "//java/client/test:__subpackages__",
        "//java/server/test:__subpackages__",
    ],
    exports = [
        "//java/client/test/org/smartqa/automationagent/testing/drivers:browser",
    ],
    deps = [
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/test/org/smartqa/automationagent/testing/drivers:browser",
    ],
)

java_library(
    name = "test-base",
    srcs = [
        "IgnoreComparator.java",
        "JUnit4TestBase.java",
        "Pages.java",
        "Safely.java",
        "SeleniumTestRunner.java",
        "StaticResources.java",
        "TearDownFixture.java",
        "TestIgnorance.java",
        "TestUtilities.java",
    ],
    visibility = [
        "//java/client/test:__subpackages__",
        "//java/server/test:__subpackages__",
    ],
    deps = [
        ":annotations",
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/src/org/smartqa/automationagent/json",
        "//java/client/src/org/smartqa/automationagent/remote",
        "//java/client/src/org/smartqa/automationagent/support/ui:wait",
        "//java/client/test/org/smartqa/automationagent/build",
        "//java/client/test/org/smartqa/automationagent/environment",
        "//java/client/test/org/smartqa/automationagent/testing/drivers",
        "//java/client/test/org/smartqa/automationagent/testing/drivers:browser",
        artifact("com.google.guava:guava"),
        artifact("junit:junit"),
        artifact("org.eclipse.mylyn.github:org.eclipse.egit.github.core"),
        artifact("org.assertj:assertj-core"),
        artifact("org.seleniumhq.automationAgent:htmlunit-driver"),
    ],
)

java_test_suite(
    name = "SmallTests",
    size = "small",
    srcs = ["IgnoreComparatorUnitTest.java"],
    visibility = [
        "//java/client/test/org/smartqa/automationagent:__pkg__",
    ],
    deps = [
        ":test-base",
        "//java/client/src/org/smartqa/automationagent:core",
        "//java/client/test/org/smartqa/automationagent/testing:annotations",
        "//java/client/test/org/smartqa/automationagent/testing/drivers",
        "//java/client/test/org/smartqa/automationagent/testing/drivers:browser",
        artifact("junit:junit"),
        artifact("org.mockito:mockito-core"),
    ],
)
